# fiap-cap-9

./: Dockerfile  Makefile  README.md  docker-compose.yaml
backend/: Cargo.toml
backend/database/migrations/: 1_initial.sql
backend/src/: lib.rs  routes.rs
backend/src/feature/: mod.rs
backend/src/feature/auth/: domain.rs  sing_up.rs  validators.rs
backend/src/feature/biometrics/: domain.rs  mod.rs  validators.rs
backend/src/infra/: axum.rs  http_client.rs  mod.rs  uuid.rs
backend/src/support/: axum.rs
backend/src/support/hash/: base64.rs  mod.rs
backend/tests/: auth_sing_in_test.rs  auth_sing_up_test.rs  biometric_create_test.rs  biometric_get_by_test.rs
database/: changelog.xml
mobile-app/BiometricValidation/: settings.gradle.kts
mobile-app/BiometricValidation/app/: build.gradle.kts
mobile-app/BiometricValidation/app/release/: output-metadata.json
mobile-app/BiometricValidation/app/src/androidTest/java/br/com/fiap/biometric/validation/: ExampleInstrumentedTest.kt
mobile-app/BiometricValidation/app/src/main/: AndroidManifest.xml
mobile-app/BiometricValidation/app/src/main/res/values/: strings.xml  themes.xml
mobile-app/BiometricValidation/app/src/main/res/xml/: provider_paths.xml
mobile-app/BiometricValidation/gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  state.rs
src/feature/auth/: mod.rs  sing_in.rs
src/feature/biometrics/: create.rs  get_by.rs  update.rs
src/infra/: database.rs  env.rs  errors.rs  observability.rs
src/support/: jwt.rs  mod.rs
src/support/hash/: hash_bcrypt.rs
tests/: commons.rs
(+11 files in other folders)
