[package]
name = "login-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.5.0" }
http-body-util = { version = "0.1.0" }
strum_macros = { version = "0.26.2" }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["catch-panic", "auth", "sensitive-headers"] }
hyper = { version = "1.1.0" }
axum = { version = "0.7.4", features = ["macros", "http2"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tracing = { version = "0.1.40" }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.3" }
reqwest-tracing = { version = "0.5.0", features = ["opentelemetry_0_22"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
rand = { version = "0.8.5" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }
chrono = "0.4.38"
aes-gcm = { version = "0.10.3" }
rsa = { version = "0.9.6" }
hex = "0.4.3"
sha2 = "0.10.8"
data-encoding = "2.6.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"

[dev-dependencies]
pg-embed = "0.7.1"
rstest = { version = "0.18.2" }
test-context = { version = "0.1.4" }
tower = { version = "0.4.13", features = ["util"] }
wiremock = "0.6.0"
serial_test = "3.1.1"
